[package]
name = "zkctl"
version = "0.1.0"
authors = ["Yang Yang <yyang@streamnative.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
rand = "0.8.3"
zookeeper = "0.5"
env_logger = "0.7"
log = "0.4"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.19"
proc-macro2 = "1.0.47"
regex = "1.7.0"
